--- a/app/components/calendar/calendar.component.html
+++ b/app/components/calendar/calendar.component.html
@@ -11,8 +11,8 @@
     <div class="row">
         <div class="col-xs-3">
             <div class="form-group label-floating" [ngClass]="{'form-error': !propertyForm.controls['MinimumStay'].valid && errorForm}">
-                <label class="control-label">Minimum Days Stay {{propertyForm.controls['MinimumStay'].valid}}</label>
-                <input type="text" class="form-control" formControlName="MinimumStay">
+                <label class="control-label">Minimum Days Stay</label>
+                <input type="number" min="0" class="form-control" formControlName="MinimumStay">
             </div>
         </div>
     </div>
