--- a/app/pages/users/login/login.component.html
+++ b/app/pages/users/login/login.component.html
@@ -8,23 +8,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/#/dashboard">MD Pro Angular111</a>
+            <a class="navbar-brand" href="/dashboard">Privadia Exchange</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="/home">
-                        <i class="material-icons">dashboard</i> Dashboard
-                    </a>
-                </li>
                 <li class="">
                     <a href="/register">
                         <i class="material-icons">person_add</i> Register
-                    </a>
-                </li>
-                <li class=" active ">
-                    <a href="/login">
-                        <i class="material-icons">fingerprint</i> Login
                     </a>
                 </li>
             </ul>
@@ -38,42 +28,19 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-md-offset-4 col-sm-offset-3">
-                        <form method="#" action="#">
+                        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                             <div class="card card-login card-hidden">
-                                <div class="card-header text-center" data-background-color="rose">
+                                <div class="card-header text-center" data-background-color="blue">
                                     <h4 class="card-title">Login</h4>
-                                    <div class="social-line">
-                                        <a href="#btn" class="btn btn-just-icon btn-simple">
-                                            <i class="fa fa-facebook-square"></i>
-                                        </a>
-                                        <a href="#pablo" class="btn btn-just-icon btn-simple">
-                                            <i class="fa fa-twitter"></i>
-                                        </a>
-                                        <a href="#eugen" class="btn btn-just-icon btn-simple">
-                                            <i class="fa fa-google-plus"></i>
-                                        </a>
-                                    </div>
                                 </div>
-                                <p class="category text-center">
-                                    Or Be Classical
-                                </p>
                                 <div class="card-content">
-                                    <div class="input-group">
-                                        <span class="input-group-addon">
-                                            <i class="material-icons">face</i>
-                                        </span>
-                                        <div class="form-group label-floating">
-                                            <label class="control-label">First Name</label>
-                                            <input type="text" class="form-control">
-                                        </div>
-                                    </div>
                                     <div class="input-group">
                                         <span class="input-group-addon">
                                             <i class="material-icons">email</i>
                                         </span>
                                         <div class="form-group label-floating">
                                             <label class="control-label">Email address</label>
-                                            <input type="email" class="form-control">
+                                            <input type="email" class="form-control" formControlName="email">
                                         </div>
                                     </div>
                                     <div class="input-group">
@@ -82,12 +49,12 @@
                                         </span>
                                         <div class="form-group label-floating">
                                             <label class="control-label">Password</label>
-                                            <input type="password" class="form-control">
+                                            <input type="password" class="form-control" formControlName="password">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="footer text-center">
-                                    <button type="submit" class="btn btn-rose btn-simple btn-wd btn-lg">Let's go</button>
+                                    <button type="submit" class="btn btn-success btn-simple btn-wd btn-lg">Let's go</button>
                                 </div>
                             </div>
                         </form>
