--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -314,7 +314,9 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .form-group.form-error .form-control,
 .form-group.form-error.is-focused .form-control,
 .form-group.has-error .form-control,
-.form-group.has-error.is-focused .form-control {
+.form-group.has-error.is-focused .form-control,
+.input-group.form-error .form-group .form-control,
+.input-group.form-error .form-group.is-focused .form-control{
 	background-image: linear-gradient(#b71c1c, #b71c1c), linear-gradient(#5399bc, #5399bc);
 	background-size: 100% 2px, 100% 1px;
 	transition-duration: 0.3s;
