--- a/app/pages/users/login/login.component.html
+++ b/app/pages/users/login/login.component.html
@@ -33,7 +33,9 @@
                                     <h4 class="card-title">Login</h4>
                                 </div>
                                 <div class="card-content">
-                                    <div class="input-group" [ngClass]="{'form-error': !loginForm.controls.Email.valid && loginForm.controls.Email.touched}">
+                                    <div class="input-group"
+                                         [ngClass]="{'form-error': !loginForm.controls.Email.valid && loginForm.controls.Email.touched
+                                                                   || !loginForm.controls.Email.valid && errorForm}">
                                         <span class="input-group-addon">
                                             <i class="material-icons">email</i>
                                         </span>
@@ -42,7 +44,8 @@
                                             <input type="email" class="form-control" formControlName="Email">
                                         </div>
                                     </div>
-                                    <div class="input-group" [ngClass]="{'form-error': !loginForm.controls.Password.valid}">
+                                    <div class="input-group" [ngClass]="{'form-error': !loginForm.controls.Password.valid && loginForm.controls.Password.touched
+                                                                   || !loginForm.controls.Password.valid && errorForm}">
                                         <span class="input-group-addon">
                                             <i class="material-icons">lock_outline</i>
                                         </span>
