--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,3 +1,5 @@
+<router-outlet></router-outlet>
+<!--
 <div class="wrapper" *ngIf="location.path() != '/login'">
     <div class="sidebar" data-active-color="white" data-background-color="#0b5a7c">
         <sidebar-cmp></sidebar-cmp>
@@ -9,3 +11,4 @@
     </div>
 </div>
 <users-cmp *ngIf="location.path() == '/login'"></users-cmp>
+-->
