--- a/app/layout/layout.component.html
+++ b/app/layout/layout.component.html
@@ -1,5 +1,10 @@
-<app-header></app-header>
-<app-sidebar></app-sidebar>
-<section class="main-container">
-    <router-outlet></router-outlet>
-</section>
+<div class="wrapper">
+    <div class="sidebar" data-active-color="white" data-background-color="#0b5a7c">
+        <app-sidebar></app-sidebar>
+        <div class="sidebar-background primary-color"></div>
+    </div>
+    <div class="main-panel">
+        <app-header></app-header>
+        <router-outlet></router-outlet>
+    </div>
+</div>
