--- a/app/layout/layout.component.html
+++ b/app/layout/layout.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="sidebar" data-active-color="white" data-background-color="#0b5a7c">
-        <app-sidebar></app-sidebar>
+        <sidebar-cmp></sidebar-cmp>
         <div class="sidebar-background primary-color"></div>
     </div>
     <div class="main-panel">
