--- a/app/shared/components/sidebar/sidebar.component.html
+++ b/app/shared/components/sidebar/sidebar.component.html
@@ -44,7 +44,7 @@
     <div class="nav-container">
         <ul class="nav">
             <li routerLinkActive="active" *ngFor="let item of menuItems">
-                <a [routerLink]="[item.path]" (click)="menuClick()">
+                <a [routerLink]="['/' + item.path]" (click)="menuClick()">
                     <i class="material-icons">{{item.icon}}</i>
                     <p>{{item.title}}</p>
                 </a>
