--- a/app/pages/dashboard/dashboard.component.html
+++ b/app/pages/dashboard/dashboard.component.html
@@ -1,16 +1,18 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row filter">
+            <!--
         	<metafilter-cmp></metafilter-cmp>
+        	-->
         </div>
 
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngFor=" let item of mainService.villas; let i = index " >
-            <villa-cmp [villa]="item" [region]="mainService.regions[item.RegionId-1].Name"></villa-cmp>
+        <div class="col-lg-4 col-md-6 col-sm-6" *ngFor=" let item of dashboardService.villas; let i = index " >
+            <villa-cmp [villa]="item" [region]="dashboardService.regions[item.RegionId-1].Name"></villa-cmp>
         </div>
 
     </div>
 </div>
 
-<div class="loading-gif" [hidden]="!mainService.isReading">
+<div class="loading-gif" [hidden]="!dashboardService.isReading">
 	<img src="../assets/img/loading.gif"/>
 </div>
