--- a/app/pages/properties/properties.component.html
+++ b/app/pages/properties/properties.component.html
@@ -42,8 +42,8 @@
                                     <th class="disabled-sorting text-right"></th>
                                 </tr>
                                 </tfoot>
-                                <tbody id="bookingTableBody" *ngIf="!mainService.isReading">
-                                <tr *ngFor="let item of mainService.properties; let i = index; let last = last ">
+                                <tbody id="bookingTableBody" *ngIf="!dashboardService.isReading">
+                                <tr *ngFor="let item of dashboardService.properties; let i = index; let last = last ">
                                     <td class="thumb">
                                         <img class="img"
                                              src="{{ item.ImageId ? 'http://res.cloudinary.com/privadia/image/upload/c_fill,h_280,w_430/c_fill,q_80/' + item.ImageId + '.jpg' : '../assets/img/image_placeholder.jpg' }}">
@@ -72,7 +72,7 @@
                                             <i class="material-icons">delete</i>Remove
                                         </button>
                                     </td>
-                                    {{ !mainService.isReading && last && !datatableInited ? finishReading() : "" }}
+                                    {{ !dashboardService.isReading && last && !datatableInited ? finishReading() : "" }}
                                 </tr>
                                 </tbody>
                             </table>
@@ -95,6 +95,6 @@
     </div>
 </div>
 
-<div class="loading-gif" [hidden]="!mainService.isReading">
+<div class="loading-gif" [hidden]="!dashboardService.isReading">
     <img src="../assets/img/loading.gif"/>
 </div>
