fixed add/edit/setrates providers

--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -83,33 +83,33 @@
                             </div>
 
                             <div id="metatab-property-4" class="card-content p-b-none p-t-none">
-                                <property-metafilter-cmp *ngIf="mainService.metadata[3]"
+                                <property-metafilter-cmp *ngIf="dashboardService.metadata[3]"
                                                          [group]="propertyForm"
-                                                         [metadata]="mainService.metadata[3]"></property-metafilter-cmp>
+                                                         [metadata]="dashboardService.metadata[3]"></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-3" class="card-content p-b-none p-t-none">
-                                <property-metafilter-cmp *ngIf="mainService.metadata[2]"
+                                <property-metafilter-cmp *ngIf="dashboardService.metadata[2]"
                                                          [group]="propertyForm"
-                                                         [metadata]="mainService.metadata[2]" #localActivities></property-metafilter-cmp>
+                                                         [metadata]="dashboardService.metadata[2]" #localActivities></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-6" class="card-content p-b-none p-t-none">
-                                <property-metafilter-cmp *ngIf="mainService.metadata[5]"
+                                <property-metafilter-cmp *ngIf="dashboardService.metadata[5]"
                                                          [group]="propertyForm"
-                                                         [metadata]="mainService.metadata[5]" #features></property-metafilter-cmp>
+                                                         [metadata]="dashboardService.metadata[5]" #features></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-2" class="card-content p-b-none p-t-none">
-                                <property-metafilter-cmp *ngIf="mainService.metadata[1]"
+                                <property-metafilter-cmp *ngIf="dashboardService.metadata[1]"
                                                          [group]="propertyForm"
-                                                         [metadata]="mainService.metadata[1]" #services></property-metafilter-cmp>
+                                                         [metadata]="dashboardService.metadata[1]" #services></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-1" class="card-content p-b-none p-t-none">
-                                <property-metafilter-cmp *ngIf="mainService.metadata[0]"
+                                <property-metafilter-cmp *ngIf="dashboardService.metadata[0]"
                                                          [group]="propertyForm"
-                                                         [metadata]="mainService.metadata[0]" #trip></property-metafilter-cmp>
+                                                         [metadata]="dashboardService.metadata[0]" #trip></property-metafilter-cmp>
                             </div>
                         </div>
                     </div>
