--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -144,8 +144,8 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <div *ngIf="mainService.metadata[4]">
-                        <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[4]" #villadescription></property-metafilter-cmp>
+                    <div *ngIf="dashboardService.metadata[4]">
+                        <property-metafilter-cmp [group]="propertyForm" [metadata]="dashboardService.metadata[4]" #villadescription></property-metafilter-cmp>
                     </div>
                 </div>
             </div>
