--- a/app/pages/properties/editproperty/editproperty.component.html
+++ b/app/pages/properties/editproperty/editproperty.component.html
@@ -91,24 +91,24 @@
                                 <propertymarketing-cmp [group]="propertyForm"></propertymarketing-cmp>
                             </div>
 
-                            <div id="metatab-property-4" class="fade card-content p-b-none p-t-none" *ngIf="mainService.metadata[3] && isLoad">
-                                <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[3]"></property-metafilter-cmp>
+                            <div id="metatab-property-4" class="fade card-content p-b-none p-t-none" *ngIf="dashboardService.metadata[3] && isLoad">
+                                <property-metafilter-cmp [group]="propertyForm" [metadata]="dashboardService.metadata[3]"></property-metafilter-cmp>
                             </div>
 
-                            <div id="metatab-property-3" class="fade card-content p-b-none p-t-none" *ngIf="mainService.metadata[2] && isLoad">
-                                <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[2]" #localActivities></property-metafilter-cmp>
+                            <div id="metatab-property-3" class="fade card-content p-b-none p-t-none" *ngIf="dashboardService.metadata[2] && isLoad">
+                                <property-metafilter-cmp [group]="propertyForm" [metadata]="dashboardService.metadata[2]" #localActivities></property-metafilter-cmp>
                             </div>
 
-                            <div id="metatab-property-6" class="fade card-content p-b-none p-t-none" *ngIf="mainService.metadata[5] && isLoad">
-                                <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[5]" #features></property-metafilter-cmp>
+                            <div id="metatab-property-6" class="fade card-content p-b-none p-t-none" *ngIf="dashboardService.metadata[5] && isLoad">
+                                <property-metafilter-cmp [group]="propertyForm" [metadata]="dashboardService.metadata[5]" #features></property-metafilter-cmp>
                             </div>
 
-                            <div id="metatab-property-2" class="fade card-content p-b-none p-t-none" *ngIf="mainService.metadata[1] && isLoad">
-                                <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[1]" #services></property-metafilter-cmp>
+                            <div id="metatab-property-2" class="fade card-content p-b-none p-t-none" *ngIf="dashboardService.metadata[1] && isLoad">
+                                <property-metafilter-cmp [group]="propertyForm" [metadata]="dashboardService.metadata[1]" #services></property-metafilter-cmp>
                             </div>
 
-                            <div id="metatab-property-1" class="fade card-content p-b-none p-t-none" *ngIf="mainService.metadata[0] && isLoad">
-                                <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[0]" #trip></property-metafilter-cmp>
+                            <div id="metatab-property-1" class="fade card-content p-b-none p-t-none" *ngIf="dashboardService.metadata[0] && isLoad">
+                                <property-metafilter-cmp [group]="propertyForm" [metadata]="dashboardService.metadata[0]" #trip></property-metafilter-cmp>
                             </div>
                         </div>
                     </div>
