--- a/app/components/dashboard-filter/dashboard-filter.component.css
+++ b/app/components/dashboard-filter/dashboard-filter.component.css
@@ -3,6 +3,11 @@
     border-radius:0px;
     box-shadow: 0px 5px 10px 0 rgba(170, 168, 168, 0.4);
 }
+.filter-card .input-group .material-icons {
+    color: #5399bc;
+    font-size: 18px;
+    font-family: Roboto, Helvetica, Arial, sans-serif;
+}
 
 /*
 .card {
