--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-xs-2">
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="material-icons">$</i></span>
+                            <span class="input-group-addon"><i class="material-icons non-icon">$</i></span>
                             <input-field-cmp
                                     [data]="{title: 'From ($)', name: 'from', value: '40', type: 'number'}"></input-field-cmp>
                         </div>
@@ -17,8 +17,12 @@
                                     [data]="{title: 'To $', name: 'to', value: '4000', type: 'number'}"></input-field-cmp>
                         </div>
                     </div>
-                    <div class="col-xs-2">Test</div>
-                    <div class="col-xs-2">Test</div>
+                    <div class="col-xs-2">
+                        <datetimepicker-field-cmp [data]="{title: 'Check In', name: 'check_in', value: '06/21/2017'}"></datetimepicker-field-cmp>
+                    </div>
+                    <div class="col-xs-2">
+                        <datetimepicker-field-cmp [data]="{title: 'Check Out', name: 'check_in', value: '06/21/2017'}"></datetimepicker-field-cmp>
+                    </div>
                     <div class="col-xs-2">
                         <input-field-cmp
                                 [data]="{title: 'Bedrooms', name: 'bedrooms', value: '0', type: 'number'}"></input-field-cmp>
