added select field

--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -28,8 +28,8 @@
                                 [data]="{title: 'Bedrooms', name: 'bedrooms', value: '0', type: 'number'}"></input-field-cmp>
                     </div>
                     <div class="col-xs-2">
-                        <input-field-cmp
-                                [data]="{title: 'From $', name: 'from', value: '0', type: 'number'}"></input-field-cmp>
+                        <select-field-cmp
+                                [data]="{title: 'From $', name: 'from', value: '0', type: 'number'}"></select-field-cmp>
                     </div>
                 </div>
             </form>
