--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -36,18 +36,19 @@
                     </button>
                 </div>
                 <div class="row">
-                    <div id="extend-filter" class="extend-filter-container collapse">
+                    <div id="extend-filter" class="extend-filter-container collapse" *ngIf="dashboardService.metadata.length">
                         <div class="card">
                             <ul class="row m-l-r-none nav nav-pills">
-                                <li class="nav-pill col-xs-2 col-width-20">
+                                <li class="nav-pill col-xs-2 col-width-21" *ngFor="let metafilter of metafilters">
                                     <div class="form-group label-floating">
-                                        <label class="control-label">Local Activities</label>
-                                        <p class="form-control-static" data-toggle="tab" href="#activities">
+                                        <label class="control-label">{{metafilter.Name}}</label>
+                                        <a class="form-control-static" data-toggle="tab" [href]="'#metafilter-' + metafilter.Id">
                                             Select
                                             <span class="caret"></span>
-                                        </p>
+                                        </a>
                                     </div>
                                 </li>
+                                <!--
                                 <li class="nav-pill col-xs-2 col-width-20">
                                     <div class="form-group label-floating">
                                         <label class="control-label">Points of Interest</label>
@@ -84,164 +85,19 @@
                                         </p>
                                     </div>
                                 </li>
+                                -->
                             </ul>
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="tab-content">
-                                        <div id="activities" class="tab-pane">
+
+                                        <div *ngFor="let metafilter of metafilters" [id]="'metafilter-' + metafilter.Id" class="tab-pane">
                                             <div class="row">
-                                                <div class="col-xs-3">
-                                                    <h5 class="m-b-none">Amenities</h5>
-                                                    <div class="checkbox">
+                                                <div *ngFor="let metadata of metafilter.MetaDataSubTypes" class="col-xs-3">
+                                                    <h5 class="m-b-none">{{metadata.Name}}</h5>
+                                                    <div class="checkbox" *ngFor="let meta of metadata.MetaData">
                                                         <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Internet
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Fireplace
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Fireplace
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Wood Stove
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Heating
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Towels Provided
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Washing Machine
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Tumble Dryer
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Parking
-                                                        </label>
-                                                    </div>
-
-                                                </div>
-                                                <div class="col-xs-3">
-                                                    <h5 class="m-b-none">Amenities</h5>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Internet
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Fireplace
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Fireplace
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Wood Stove
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Heating
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Towels Provided
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Washing Machine
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Tumble Dryer
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Parking
-                                                        </label>
-                                                    </div>
-
-                                                </div>
-                                                <div class="col-xs-3">
-                                                    <h5 class="m-b-none">Amenities</h5>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Internet
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Fireplace
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Fireplace
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Wood Stove
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Heating
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Towels Provided
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Washing Machine
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Tumble Dryer
-                                                        </label>
-                                                    </div>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Parking
-                                                        </label>
-                                                    </div>
-
-                                                </div>
-                                                <div class="col-xs-3">
-                                                    <h5 class="m-b-none">Amenities</h5>
-                                                    <div class="checkbox">
-                                                        <label>
-                                                            <input type="checkbox" formControlName="SmokingAllowed"> Internet
+                                                            <input type="checkbox" formControlName="SmokingAllowed"> {{meta.Name}}
                                                         </label>
                                                     </div>
                                                     <div class="checkbox">
@@ -287,18 +143,6 @@
 
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div id="poi" class="tab-pane">
-                                            poi
-                                        </div>
-                                        <div id="features" class="tab-pane">
-                                            features
-                                        </div>
-                                        <div id="setting" class="tab-pane">
-                                            setting
-                                        </div>
-                                        <div id="trip" class="tab-pane">
-                                            trip
                                         </div>
                                     </div>
                                 </div>
