--- a/app/pages/dashboard/dashboard.component.html
+++ b/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row filter">
-        	<dashboard-filter-cmp></dashboard-filter-cmp>
+        	<dashboard-filter-cmp [metafilters]="dashboardService.metadata"></dashboard-filter-cmp>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6" *ngFor=" let item of dashboardService.villas; let i = index " >
             <villa-cmp [villa]="item" [region]="dashboardService.regions[item.RegionId-1].Name"></villa-cmp>
