--- a/app/components/form-fields/datetimepicker-field/datetimepicker-field.component.html
+++ b/app/components/form-fields/datetimepicker-field/datetimepicker-field.component.html
@@ -1,10 +1,10 @@
-<div class="input-group">
+<div [formGroup]="filterForm" class="input-group">
     <span class="input-group-addon"><i class="material-icons">insert_invitation</i></span>
     <div class="form-group label-floating">
         <label class="control-label">{{data.title}}</label>
         <input type="text"
-               value="{{data.value}}"
-               class="form-control datepicker" />
+               class="form-control datepicker"
+               [formControlName]="data.name"/>
         <!--
         <input type="text"
                class="form-control datepicker"
@@ -15,21 +15,3 @@
         -->
     </div>
 </div>
-<!--
-<div class="input-group">
-    <span class="input-group-addon"><i class="material-icons">insert_invitation</i></span>
-    <div class="form-group date-group">
-        <label class="control-label">{{data.title}}</label>
-        <input type="text"
-               class="form-control datepicker" />
-        <!--
-        <input type="text"
-               class="form-control datepicker"
-               #datePicker
-               [ngModel]="rate.controls.StartDate.value"
-               (blur)="rate.controls.StartDate.setValue(datePicker.value)"
-               [formControl]="rate.controls.StartDate"/>
-        --><!--
-    </div>
-</div>-->
-
