--- a/app/components/form-fields/select-field/select.component.html
+++ b/app/components/form-fields/select-field/select.component.html
@@ -4,15 +4,9 @@
             multiple
             data-style="select-with-transition"
             title="Select"
-            data-size="7">
-        <option value="0">0</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
+            data-size="7"
+            (change)="regionChange($event)">
+        <option *ngFor="let region of regions; let i = index" [value]="region.Id">{{region.Name}}</option>
     </select>
 </div>
 
